# pareto-support-proofs

./: .gitattributes  .gitignore  .zenodo.json  AUTHORS.md  CITATION.cff  Dockerfile  LICENSE  LICENSE-DATA.md  Makefile  NOTICE  README.md  REPRODUCE.md  codemeta.json  environment.yml  pyproject.toml  requirements-validation.txt
.github/workflows/: ci.yml
checker/: verify_certificate.py
docs/: ALGORITHM_AND_CORRECTNESS.md  CHANGELOG.md  COMPUTATIONAL_STUDY.md  MATHEMATICAL_CONTRACT.md  PROOF_OBJECT_SPECIFICATION.md  THREAT_MODEL.md  VALIDATION.md
examples/: reference_manifest.json
examples/candidates/: assignment_negative_p3_candidate.json  binary_negative_p2_candidate.json  (+5 more)
figures/: certificate_geometry.eps
protocol/: computational_study_protocol.json
schemas/: certificate-v1.schema.json  instance-v1.schema.json  trace-v1.schema.json
scripts/: make_figure.py  regenerate_examples.py  reproduce_all.sh  run_exact_falsification.py  run_release_validation.py  run_study.py  run_study_all.sh  run_study_partition.py  scan_release.py  validate_metadata.py
tests/: common.py  test_exact.py  test_generator_checker.py  test_mathematical_edge_cases.py  test_mutations.py  test_oracles.py  test_release_integrity.py  test_schemas.py  test_study_constructions.py
validation/: FILE_MANIFEST.sha256  checker_imports.json  corpus_replay.json  evidence_summary.json  exact_falsification_summary.json  json_schema_summary.json  manifest_summary.json  metadata_summary.json  release_hygiene.json  release_summary.json  study_environment.json  test_summary.json
(+734 files in other folders)
