[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "pareto-support-proofs"
version = "0.6.1"
description = "Exact proof objects for weighted-sum supportability in finite multi-objective optimisation"
requires-python = ">=3.11"
authors = [{name = "Antonio Clim"}]
license = "BSD-3-Clause"
license-files = ["LICENSE", "LICENSE-DATA.md", "NOTICE", "AUTHORS.md"]
readme = "README.md"
keywords = [
  "multi-objective optimisation",
  "weighted-sum supportability",
  "unsupportedness",
  "proof certificates",
  "exact verification",
  "reproducible research"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Mathematics"
]
dependencies = []

[project.optional-dependencies]
validation = [
  "jsonschema==4.26.0",
  "matplotlib==3.10.8",
  "numpy==2.3.5",
  "Pillow==12.2.0",
  "PyYAML==6.0.3"
]

[project.scripts]
pareto-support-generate = "pareto_support_proofs.cli_generate:main"

[tool.setuptools.packages.find]
where = ["src"]
